# tools_aabMicro

./: README.md  docker-compose.admin.yml  docker-compose.yml  opdracht.md  verslag eindopdracht.docx
dashboard/: Dockerfile  requirements.txt
dashboard/app/: AraaniProtocol.py  CombinedMetrics.py  DataBaseOld.py  Run.py  VideoLibrary.py  app.py  appUtils.py  createDataForApp.py  dataUtils.py  databaseNew.py  utils.py  viewmodels.py
dashboard/app/assets/: BWLwgP.css
dashboard/app/videos/: mdb_repo_category.py  mdb_repo_library.py  mdb_repo_video.py  models.py  repo_category.py  repo_library.py  repo_video.py  schemas.py
documents/: verslag eindopdracht Bart Dewancker.docx  verslag eindopdracht.docx
video_api/: Dockerfile  pyproject.toml
video_api/app/: database.py  graphql_models.py  main.py  nosql_database.py  viewmodels.py
video_api/app/aabdata/: models.py  repository.py  router.py
video_api/app/videos/: graphql_category.py  graphql_library.py  graphql_video.py  mdb_repo_category.py  mdb_repo_library.py  mdb_repo_video.py  models.py  repo_category.py  repo_library.py  repo_video.py  router_category.py  router_library.py  router_video.py  schemas.py
